# fm-playground

./: CHANGELOG.md  README.md  compose.yml  toolsDetails-Christiane-Gütter-123023.docx
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alloy-api/: Dockerfile  build.gradle
alloy-api/src/main/resources/: application.properties
backend/: pyproject.toml  requirements.txt
backend/db/: models.py
backend/migrations/versions/: 4d97469a22d9_add_reference_column_to_data_table.py
backend/routes/: playground.py
dafny-api/: .env.example  main.py  pyproject.toml  setup-gvisor.sh
dafny-api/dafny_exec/: dafny.py
dafny-lsp-proxy/: pyproject.toml
docs/: requirements.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  atoms.tsx
frontend/src/api/: playgroundApi.ts
frontend/src/components/Playground/: Editor.tsx  HiddenAssessmentConfig.tsx  LspEditor.tsx  Playground.tsx
frontend/src/components/TeacherArea/: ReferenceInput.tsx  RefrenceInput.tsx  TeacherEditor.tsx  TeacherPage.tsx
frontend/src/utils/: codeExecutionUtils.ts
frontend/tools/alloy/: alloyExecutor.ts  alloyUtils.js
frontend/tools/common/: Guides.json  dynamicLspWrapperConfig.ts  lineHighlightingUtil.ts
frontend/tools/dafny/: dafnyExecutor.ts  dafnyTextMateGrammar.ts
frontend/tools/smt/: z3Executor.ts
limboole-api/: pyproject.toml
limboole-diff-api/: pyproject.toml
nuxmv-api/: pyproject.toml
smt-diff-api/: main.py  pyproject.toml
smt-diff-api/smt_diff/: smt_diff.py
smt-diff-api/tests/: test_caching_bug.py  test_smt_diff_execution.py
spectra-api/: pyproject.toml
z3-api/: .env.example  main.py  pyproject.toml
z3-api/tests/: test-cases-assessment.json  test-cases-generation.json  test_assignment_assessment.py
z3-api/z3_exec/: model_iteration.py  z3.py
(+33 files in other folders)
