[tool.poetry]
name = "smt-diff-api"
version = "2.12.0"
description = "SMT Diff API for FM Playground"
authors = ["Soaibuzzaman <soaibuzzaman@uni-weimar.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.120.1"}
httpx = "^0.28.1"
requests = "^2.32.5"
uvicorn = "^0.37.0"
python-dotenv = "^1.0.1"
z3-solver = "^4.15.3.0"
sexpdata = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.2.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
